Added merge epic into a new pack feature
